--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(<%= asset_path 'cathryn-lavery-67852-unsplash.jpg' %>);">
+  <div class="banner-content">
+   <h1>Habit Tracker</h1>
+   <p>It's time to break bad habits and build good ones</p>
+   <%= link_to "Start now", new_user_session_path, class: "btn btn-primary btn-lg" %>
+ </div>
+</div>
