--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,6 +2,6 @@
   <div class="banner-content">
    <h1>Habit Tracker</h1>
    <p>It's time to break bad habits and build good ones</p>
-   <%= link_to "Start now", new_user_session_path, class: "btn btn-primary btn-lg" %>
+   <%= link_to "Start now", habits_path, class: "btn btn-primary btn-lg" %>
  </div>
 </div>
