Add associations and start work on pundit

--- a/app/views/habits/index.html.erb
+++ b/app/views/habits/index.html.erb
@@ -10,6 +10,7 @@
           <ul>
             <li><h6>Details: <%= habit.details %></h6></li>
             <li><h6>Category: <%= habit.category %></h6></li>
+            <% end %>
           </ul>
           <% end %>
         </ul>
