Add style to main used devise pages

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<div class="banner" style="background-image: url(<%= asset_path 'glenn-carstens-peters-190592-unsplash.jpg' %>);">
 <div class="container">
   <div class="row">
     <div class="col-sm-4 col-sm-offset-4">
@@ -38,4 +39,5 @@
 
     </div>
   </div>
+</div>
 </div>
