--- a/app/views/habits/_form.html.erb
+++ b/app/views/habits/_form.html.erb
@@ -1,11 +1,9 @@
 <%= simple_form_for(@habit) do |h| %>
 <div class="form-group">
-  <%= h.label :title %>
-  <%= h.text_field :title, class: "form-controll" %>
+  <%= h.input :title %>
 </div>
 <div class="form-group">
-  <%= h.label :details %>
-  <%= h.text_field :details, class: "form-controll" %>
+  <%= h.input :details %>
 </div>
 <div class="form-group">
   <%= h.input :category, :collection => ["personal", "work", "health"] %>
