--- a/app/views/habits/new.html.erb
+++ b/app/views/habits/new.html.erb
@@ -1,13 +1,13 @@
-<div class="container">
-  <div class="row">
-    <div class="col-sm-4 col-sm-offset-4">
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(<%= asset_path 'rawpixel-577482-unsplash.jpg' %>);">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6 col-sm-offset-3">
 
-      <h1>Add new habit</h1>
+        <h1>Add new habit</h1>
 
-      <%= render "form" %>
+        <%= render "form" %>
 
-      <%= link_to "Home", habits_path %>
-
+      </div>
     </div>
   </div>
 </div>
