--- a/app/views/habits/show.html.erb
+++ b/app/views/habits/show.html.erb
@@ -1,17 +1,25 @@
-<div class="container">
-  <div class="row">
-    <div class="col-sm-4 col-sm-offset-4">
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(<%= asset_path 'rawpixel-577482-unsplash.jpg' %>);">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6 col-sm-offset-3">
 
-      <div class="habits">
-        <h1><%= @habit.title %></h1>
-        <h6>Details: <%= @habit.details %></h6>
-        <h6>Category: <%= @habit.category %></h6>
+        <div class="habits">
+          <div class="habits-title">
+          <h2><%= @habit.title %></h2>
+          </div>
+        <div class="habits-details">
+          <i class="fas fa-info-circle"></i> <%= @habit.details %>
+          </div>
+          <div class="habits-category">
+          <i class="fas fa-archive"></i> <%= @habit.category %>
+        </div>
+        </div>
+
+        <div class="links">
+          <%= link_to "Edit", edit_habit_path %> | <%= link_to "Back", habits_path %>
+        </div>
+
       </div>
-
-      <div class="links">
-        <%= link_to "Edit", edit_habit_path %> | <%= link_to "Back", habits_path %>
-      </div>
-
     </div>
   </div>
 </div>
