--- a/app/views/habits/edit.html.erb
+++ b/app/views/habits/edit.html.erb
@@ -7,6 +7,10 @@
 
         <%= render "form" %>
 
+        <div class="links">
+          <%= link_to "Back", habits_path %>
+        </div>
+
       </div>
     </div>
   </div>
