Add style to place index page

--- a/app/views/habits/new.html.erb
+++ b/app/views/habits/new.html.erb
@@ -3,9 +3,13 @@
     <div class="row">
       <div class="col-sm-6 col-sm-offset-3">
 
-        <h1>Add new habit</h1>
+        <h2>Add new habit</h2>
 
         <%= render "form" %>
+
+         <div class="links">
+          <%= link_to "Back", habits_path %>
+        </div>
 
       </div>
     </div>
