Add style to remaining places pages

--- a/app/views/places/_form.html.erb
+++ b/app/views/places/_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for(@place) do |p| %>
 <%= p.input :name %>
 <%= p.input :address %>
-<%= p.submit %>
+<%= p.submit class: "btn btn-success"%>
 <% end %>
