--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -1,1 +1,21 @@
-<%= render 'places/form' %>
+
+
+
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(<%= asset_path 'paul-trienekens-419330-unsplash.jpg' %>);">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6 col-sm-offset-3">
+
+        <h2>Add new place</h2>
+
+       <%= render 'places/form' %>
+
+         <div class="links">
+          <%= link_to "Back", places_path %>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</div>
+
