Refactor and improve code

--- a/app/views/habits/edit.html.erb
+++ b/app/views/habits/edit.html.erb
@@ -5,7 +5,7 @@
 
         <h2>Edit habit</h2>
 
-        <%= render "form" %>
+        <%= render "habits/form" %>
 
         <div class="links">
           <%= link_to "Back", habits_path %>
