--- a/app/views/habits/show.html.erb
+++ b/app/views/habits/show.html.erb
@@ -8,10 +8,10 @@
           <h2><%= @habit.title %></h2>
           </div>
         <div class="habits-details">
-          <i class="fas fa-info-circle"></i> <%= @habit.details %>
+          <i class="fas fa-info-circle icons-circle"></i> <%= @habit.details %>
           </div>
           <div class="habits-category">
-          <i class="fas fa-archive"></i> <%= @habit.category %>
+          <i class="fas fa-archive icons-archive"></i> <%= @habit.category %>
         </div>
         </div>
 
