--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -4,11 +4,11 @@
       <div class="col-sm-12">
 
         <div class="places">
-          <div class="habits-name">
+          <div class="places-name">
           <h2><%= @place.name %></h2>
           </div>
         <div class="places-address">
-          <i class="fas fa-map-pin"></i></i> <%= @place.address %>
+          <i class="fas fa-map-pin icons-pin"></i></i> <%= @place.address %>
           </div>
         </div>
 
