--- a/app/assets/stylesheets/habits/_index.scss
+++ b/app/assets/stylesheets/habits/_index.scss
@@ -1,54 +1,11 @@
-.habit-title {
-  color: grey;
-  text-decoration: none;
-}
-.habit-title:hover {
-  color: darkgrey;
-  text-decoration: none;
-}
-.fa-plus {
-  text-decoration: none;
-}
-.fa-plus:hover {
-  text-decoration: none;
-}
-.fa-sticky-note {
-  text-decoration: none;
-}
-.fa-sticky-note:hover {
-  text-decoration: none;
-}
-.fa-pencil-alt {
-  text-decoration: none;
-}
-.fa-pencil-alt:hover {
-  text-decoration: none;
-}
-.fa-trash-alt {
-  text-decoration: none;
-}
-.fa-trash-alt:hover {
-  text-decoration: none;
-}
-.links a {
-  color: white;
-}
-.links a:hover {
-  color: white;
-  opacity: 0.7;
-  text-decoration: none;
-}
 .habits {
   display: flex;
   flex-direction: column;
   text-align: left;
+  ul {
+    padding-left: 20px;
+  }
 }
 .habits-title {
   text-align: center;
-}
-.fa-info-circle {
-  padding-right: 5px;
-}
-.fa-archive {
-  padding-right: 5px;
 }
