--- a/app/views/habits/new.html.erb
+++ b/app/views/habits/new.html.erb
@@ -5,7 +5,7 @@
 
         <h2>Add new habit</h2>
 
-        <%= render "form" %>
+        <%= render "habits/form" %>
 
          <div class="links">
           <%= link_to "Back", habits_path %>
