--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -7,6 +7,7 @@
       <div class="notes-search">
       <%= form_tag notes_path, method: :get do %>
       <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Search" %>
+      <%= submit_tag "Search!" %>
       <% end %>
       </div>
 
