Add settings to user model

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -20,15 +20,13 @@
         <%= image_tag "github-logo.png", class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
         <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
           <li>
-
-            <%= link_to "Profile", profile_path %>
-            <%= link_to "#" do %>
-            <i class="fa fa-user"></i> <%= t(".profile", default: "Profile") %>
+            <%= link_to profile_path do %>
+            <i class="fa fa-user"></i> <%= "Profile" %>
             <% end %>
           </li>
           <li>
-            <%= link_to "#" do %>
-            <i class="fa fa-cog"></i>  <%= t(".settings", default: "Settings") %>
+            <%= link_to edit_user_path(current_user) do %>
+            <i class="fa fa-cog"></i> <%= "Settings" %>
             <% end %>
           </li>
           <li>
@@ -51,10 +49,10 @@
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
         <%= link_to "Habits", habits_path, class: "navbar-wagon-item navbar-wagon-link" %>
-       <%= link_to "Places", places_path, class: "navbar-wagon-item navbar-wagon-link" %>
-       <%= link_to "Notes", notes_path, class: "navbar-wagon-item navbar-wagon-link" %>
-     </ul>
-   </div>
- </div>
+        <%= link_to "Places", places_path, class: "navbar-wagon-item navbar-wagon-link" %>
+        <%= link_to "Notes", notes_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      </ul>
+    </div>
+  </div>
 </div>
 
