--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(user) do |u| %>
+<%= simple_form_for(@user) do |u| %>
 <%= u.input :photo %>
 <%= u.input :photo_cache, as: :hidden %>
 <%= u.submit class: "btn btn-success"%>
