Add calendar to habits index page

--- a/app/views/habits/index.html.erb
+++ b/app/views/habits/index.html.erb
@@ -1,36 +1,42 @@
 <div class="habits-container">
 
-    <div class="col-sm-6 col-sm-offset-3">
+  <div class="col-sm-6 col-sm-offset-3">
 
-      <div class="habits">
-        <h2>Habits <%= link_to"", new_habit_path, class: "fas fa-plus icons-plus" %></h2>
-        <ul>
-          <% @habits.each do |habit| %>
-          <li>
-            <%= link_to habit.title, habit_path(habit[:id]), class: "icons-title" %>
-            <br>
-            <%= link_to "", habit_path(habit[:id]), class: "far fa-sticky-note icons-note" %>
-            <% if policy(habit).edit? %>
-              <%= link_to "", edit_habit_path(habit[:id]), class: "fas fa-pencil-alt icons-pencil" %>
-            <% end %>
-            <% if policy(habit).destroy? %>
-              <%= link_to "", habit_path(habit[:id]), method: :delete, data: { confirm: 'Are you sure?' }, class: "far fa-trash-alt icons-trash" %>
-            <% end %>
-          </li>
-          <!-- <ul> -->
-            <!-- <li><h6>Details: <%= habit.details %></h6></li> -->
-            <!-- <li><h6>Category: <%= habit.category %></h6></li> -->
+    <div class="habits">
+      <h2>Habits <%= link_to"", new_habit_path, class: "fas fa-plus icons-plus" %></h2>
+      <ul>
+        <% @habits.each do |habit| %>
+        <li>
+          <%= link_to habit.title, habit_path(habit[:id]), class: "icons-title" %>
+          <br>
+          <%= link_to "", habit_path(habit[:id]), class: "far fa-sticky-note icons-note" %>
+          <% if policy(habit).edit? %>
+          <%= link_to "", edit_habit_path(habit[:id]), class: "fas fa-pencil-alt icons-pencil" %>
+          <% end %>
+          <% if policy(habit).destroy? %>
+          <%= link_to "", habit_path(habit[:id]), method: :delete, data: { confirm: 'Are you sure?' }, class: "far fa-trash-alt icons-trash" %>
+          <% end %>
+        </li>
+        <!-- <ul> -->
+          <!-- <li><h6>Details: <%= habit.details %></h6></li> -->
+          <!-- <li><h6>Category: <%= habit.category %></h6></li> -->
           <!-- </ul> -->
           <% end %>
         </ul>
       </div>
 
-     <div class="links">
+      <div class="month_calendar">
+        <%= month_calendar do |date| %>
+        <%= date.day %>
+        <% end %>
+      </div>
+
+      <div class="links">
         <%# if policy(Habit).new? %>
-          <%#= link_to "Add new habit", new_habit_path %>
+        <%#= link_to "Add new habit", new_habit_path %>
         <%# end %>
       </div>
 
     </div>
 
-</div>
+  </div>
