Modify icon style for habits index page

--- a/app/assets/stylesheets/components/_icons.scss
+++ b/app/assets/stylesheets/components/_icons.scss
@@ -6,6 +6,14 @@
   color: darkgrey;
   text-decoration: none;
 }
+.icons-title-habits {
+  color: white;
+  text-decoration: none;
+}
+.icons-title-habits:hover {
+  color: lightgrey;
+  text-decoration: none;
+}
 .icons-plus {
   text-decoration: none;
 }
