--- a/app/assets/stylesheets/places/_index.scss
+++ b/app/assets/stylesheets/places/_index.scss
@@ -1,6 +1,6 @@
 .places-container {
   display: flex;
-  flex-wrap: wrap;
+  // flex-wrap: wrap;
 }
 .places ul {
   padding-left: 20px;
@@ -14,5 +14,5 @@
 }
 .ap-dataset-places {
   text-align: left;
-    color: black;
+  color: black;
 }
