--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,6 +1,6 @@
 <div class="places-container">
 
-  <div class="col-sm-6">
+  <div class="col-sm-6 col-sm-offset-1">
     <div class="places">
       <h2>Places <%= link_to"", new_place_path, class: "fas fa-plus icons-plus" %></h2>
       <ul>
@@ -19,7 +19,7 @@
       </ul>
     </div>
   </div>
-  <div
+  <div class="col-sm-6 col-sm-offset-1"
   id="map"
   style="width: 100%;
   height: 600px;"
