--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,7 +1,7 @@
 <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(<%= asset_path 'paul-trienekens-419330-unsplash.jpg' %>);">
   <div class="container">
     <div class="row">
-      <div class="col-sm-12">
+      <div class="col-sm-6 col-sm-offset-3">
 
         <div class="places">
           <div class="places-name">
