--- a/app/assets/stylesheets/components/_icons.scss
+++ b/app/assets/stylesheets/components/_icons.scss
@@ -14,6 +14,22 @@
   color: lightgrey;
   text-decoration: none;
 }
+.icons-title-notes {
+  color: white;
+  text-decoration: none;
+}
+.icons-title-notes:hover {
+  color: lightgrey;
+  text-decoration: none;
+}
+.icons-title-places {
+  color: white;
+  text-decoration: none;
+}
+.icons-title-places:hover {
+  color: lightgrey;
+  text-decoration: none;
+}
 .icons-plus {
   text-decoration: none;
 }
