--- a/app/assets/stylesheets/places/_index.scss
+++ b/app/assets/stylesheets/places/_index.scss
@@ -5,6 +5,9 @@
 .places ul {
   padding-left: 20px;
 }
+.places h2 {
+  color: white;
+}
 #map {
   flex: 0 0 50%;
   min-width: 375px;
@@ -16,3 +19,25 @@
   text-align: left;
   color: black;
 }
+.banner-places {
+  // color: white;
+  // text-align: center;
+  height: calc(100vh - 70px);
+  background-size: cover !important;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+// .banner h1 {
+//   font-size: 50px;
+//   font-weight: bold;
+//   text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
+// }
+// .banner p {
+//   font-size: 25px;
+//   font-weight: lighter;
+//   color: rgb(255, 255, 255);
+//   opacity: 0.6;
+//   margin-bottom: 30px;
+// }
