--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,19 @@
-<%= @user.first_name %>
-<%= @user.last_name %>
+<div class="banner-places" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(<%= asset_path 'paul-trienekens-419330-unsplash.jpg' %>);">
+<div class="container profile">
+  <div class="row">
+    <div class="col-sm-6">
 
-<%= render "users/form" %>
+      <%= @user.first_name %>
+      <%= @user.last_name %>
+      <% if @user.photo.present? %>
+          <%#= cl_image_tag @user.photo, height: 300, width: 400, crop: :fill %>
+          <%= cl_image_tag(@user.photo, :transformation=>[
+            {:width=>200, :height=>200, :gravity=>"face", :radius=>"max", :crop=>"fill"}]) %>
+            <% else %>
+          <%= render "users/form", user: @user %>
+            <% end %>
+
+      <%= render "users/form" %>
+    </div>
+  </div>
+</div>
