--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,29 @@
-First Name <%= @user.first_name %>
-<br>
-Last Name: <%= @user.last_name %>
-<br>
-Email: <%= @user.email%>
+<div class="banner-places" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(<%= asset_path 'paul-trienekens-419330-unsplash.jpg' %>);">
+  <div class="container profile">
+    <div class="row">
+      <div class="col-sm-12">
+        <h2>Account</h2>
+        <!-- <div class="profile"> -->
+          First Name <%= @user.first_name %>
+          <br>
+          Last Name: <%= @user.last_name %>
+          <br>
+          Email: <%= @user.email%>
+          <br>
 
-<%= render "users/form", user: @user %>
-
-  <% if @user.photo.present? %>
-            <%= cl_image_tag @user.photo, height: 300, width: 400, crop: :fill %>
+          <% if @user.photo.present? %>
+          <%#= cl_image_tag @user.photo, height: 300, width: 400, crop: :fill %>
+          <%= cl_image_tag(@user.photo, :transformation=>[
+            {:width=>200, :height=>200, :gravity=>"face", :radius=>"max", :crop=>"fill"}]) %>
+            <% else %>
+          <%= render "users/form", user: @user %>
             <% end %>
+            <!-- </div> -->
+            <br>
+         <div class="links">
+          <%= link_to "Edit", edit_user_path(@user) %> | <%= link_to "Back", root_path %>
+        </div>
+          </div>
+        </div>
+      </div>
+
