Add more stle to notes index page

--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,6 +1,8 @@
-<div class="notes-container">
+<div class="banner-notes" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(<%= asset_path 'paul-trienekens-419330-unsplash.jpg' %>);">
+<div class="container">
+<div class="row">
 
-  <div class="col-sm-4 col-sm-offset-4">
+  <div class="col-sm-6 col-sm-offset-3">
     <div class="notes">
       <h2>Notes <%= link_to"", new_note_path, class: "fas fa-plus icons-plus" %></h2>
 
@@ -14,7 +16,7 @@
       <ul>
         <% @notes.each do |note| %>
         <li>
-          <%= link_to note.title, note_path(note[:id]), class: "icons-title" %>
+          <%= link_to note.title, note_path(note[:id]), class: "icons-title-notes" %>
           <br>
           <%= link_to "", note_path(note[:id]), class: "far fa-sticky-note icons-note" %>
 
@@ -25,4 +27,5 @@
       </ul>
     </div>
   </div>
+</div>
 </div>
