--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,12 +1,13 @@
-<div class="places-container">
+<div class="banner-places" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(<%= asset_path 'paul-trienekens-419330-unsplash.jpg' %>);">
+<div class="container">
 
-  <div class="col-sm-6 col-sm-offset-1">
+  <div class="col-sm-6">
     <div class="places">
       <h2>Places <%= link_to"", new_place_path, class: "fas fa-plus icons-plus" %></h2>
       <ul>
         <% @places.each do |place| %>
         <li>
-          <%= link_to place.name, place_path(place[:id]), class: "icons-title" %>
+          <%= link_to place.name, place_path(place[:id]), class: "icons-title-places" %>
           <br>
           <%= cl_image_tag(place.photo, :width => 100) %>
           <br>
@@ -19,9 +20,9 @@
       </ul>
     </div>
   </div>
-  <div class="col-sm-6 col-sm-offset-1"
+  <div class="col-sm-6"
   id="map"
-  style="width: 100%;
+  style="width: 50%;
   height: 600px;"
   data-markers="<%= @markers.to_json %>"
   data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
